# diminished-reality-enhanced

./: .gitattributes  .gitignore  CLAUDE.md  README.md  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh
back-end/: back-end.py  pyproject.toml
backend/: pyproject.toml  server.py  test_single_frame.py
backend/model/: checkpoint_best_total.pth  model.onnx
diminished-frontend/src/: App.css  App.jsx  constants.js
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.css  App.jsx  Settings.css  Settings.jsx  constants.js  effects.js  main.jsx  motion.js
