[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "pillow>=12.0.0",
    "pyturbojpeg>=1.8.2",
    "rfdetr>=1.3.0",
    "torch>=2.9.1",
    "websockets>=15.0.1",
]
