[project]
name = "diminished-reality-backend"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=2.0",
    "onnxruntime-gpu>=1.22,<1.23",
    "pillow>=10.0",
    "pyturbojpeg>=1.7",
    "supervision>=0.18",
    "tensorrt-cu12>=10.9,<10.10",
    "trackers>=2.0",
    "websockets>=12.0",
]
